[package]
name = "nvme-lite-oracle"
version = "1.0.0"
edition = "2021"
description = "NVMe-lite Schedule-Aware Differential Fuzzing Oracle"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
